--- a/WebBrowser.UI/Properties/Resources.resx
+++ b/WebBrowser.UI/Properties/Resources.resx
@@ -136,4 +136,7 @@
   <data name="bookmark" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bookmark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="chiptune" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\about_chiptune.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
